force-app/main/default/objects/Account/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Current Subscription Product(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Decaf</fullName>
            </value>
            <value>
                <fullName>Hot Chocolate</fullName>
            </value>
            <value>
                <fullName>Green Tea</fullName>
            </value>
            <value>
                <fullName>Black Tea</fullName>
            </value>
            <value>
                <fullName>Herbal Tea</fullName>
            </value>
            <value>
                <fullName>Creamer</fullName>
            </value>
            <value>
                <fullName>Sweetener</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>