force-app/main/default/objects/Account/validationRules/Industry_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula
  >ISNEW() &amp;&amp; ISBLANK(TEXT(Industry))</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage
  >Fill in the Industry if you want your commission!</errorMessage>
</ValidationRule>